# averroes

./: .env  .gitignore  CONTRIBUTING.md  Cargo.toml  DIAGNOSTIC_GUIDE.md  README.md  justfile  rust-toolchain.toml  rustfmt.toml
.cursor/: coding_approach.mdc  folder_architecture.mdc  overview.mdc  technical_guidance.mdc
android/: .gitignore  build.gradle.kts  gradle.properties  gradlew.bat  local.properties.example  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/rizilab/averroes/: AverroesApplication.kt  MainActivity.kt
android/app/src/main/java/com/rizilab/averroes/data/api/: ApiClient.kt  CoinGeckoApi.kt
android/app/src/main/java/com/rizilab/averroes/data/model/: CryptoModels.kt  WalletModels.kt
android/app/src/main/java/com/rizilab/averroes/data/repository/: CryptoRepository.kt  WalletRepository.kt
android/app/src/main/java/com/rizilab/averroes/data/wallet/: NetworkConfig.kt  WalletPersistence.kt  WalletService.kt
android/app/src/main/java/com/rizilab/averroes/presentation/: App.kt
android/app/src/main/java/com/rizilab/averroes/presentation/auth/: AuthScreen.kt  AuthViewModel.kt
android/app/src/main/java/com/rizilab/averroes/presentation/base/: MviViewModel.kt
android/app/src/main/java/com/rizilab/averroes/presentation/chat/: ChatScreen.kt  ChatViewModel.kt
android/app/src/main/java/com/rizilab/averroes/presentation/crypto/: CryptoScreen.kt  CryptoViewModel.kt
android/app/src/main/java/com/rizilab/averroes/presentation/navigation/: AppNavigation.kt
android/app/src/main/java/com/rizilab/averroes/presentation/screens/: MainScreens.kt
android/app/src/main/java/com/rizilab/averroes/presentation/splash/: SplashScreen.kt  SplashViewModel.kt
android/app/src/main/java/com/rizilab/averroes/presentation/theme/: Theme.kt
android/app/src/main/java/com/rizilab/averroes/presentation/wallet/: SharedWalletViewModel.kt  WalletViewModel.kt
android/app/src/main/java/com/rizilab/fiqhadvisor/: AISystemDiagnostics.kt  DebugIntegration.kt  FiqhAdvisorApplication.kt  MainActivity.kt  TestIntegration.kt
android/app/src/main/java/com/rizilab/fiqhadvisor/data/database/: AnalysisEntity.kt
android/app/src/main/java/com/rizilab/fiqhadvisor/di/: AppModule.kt  DatabaseModule.kt
android/app/src/main/java/com/rizilab/fiqhadvisor/navigation/: FiqhAdvisorNavigation.kt
android/app/src/main/java/com/rizilab/fiqhadvisor/ui/: FiqhAIApp.kt
android/app/src/main/java/com/rizilab/fiqhadvisor/ui/components/: FiqhComponents.kt
android/app/src/main/java/com/rizilab/fiqhadvisor/ui/screens/: AnalysisDetailScreen.kt  AnalysisScreen.kt  AuthScreen.kt  ChatScreen.kt  HistoryScreen.kt  HomeScreen.kt  SettingsScreen.kt  SplashScreen.kt
android/app/src/main/java/com/rizilab/fiqhadvisor/ui/theme/: FiqhColors.kt  FiqhTypography.kt
android/app/src/main/java/com/rizilab/fiqhadvisor/ui/viewmodel/: FiqhAIViewModel.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
android/core/: build.gradle.kts  consumer-rules.pro
android/core/src/main/java/com/rizilab/fiqhadvisor/core/: AverroesManager.kt  AverroesStreamCallback.kt  FiqhAIManager.kt  StreamingCallback.kt
android/gradle/: libs.versions.toml
benches/: Cargo.toml
benches/src/: analysis_performance.rs  benches.rs
core/: Cargo.toml
core/src/: tick.rs
crates/backend/: Cargo.toml
crates/backend/src/: main.rs
crates/core/: Cargo.toml  build.rs  uniffi.toml
crates/core/src/: lib.rs
crates/core/src/actors/: analyzer_actor.rs  history_actor.rs  mod.rs  query_actor.rs  scraper_actor.rs
crates/core/src/actors/tests/: gherkin_scenarios.rs  mod.rs
crates/core/src/ai/: chains.rs  embeddings.rs  grok_client.rs  groq_client.rs  mod.rs  models.rs  openai_client.rs  service.rs
crates/core/src/analysis/: mod.rs
crates/core/src/api/: handlers.rs  middleware.rs  mod.rs  routes.rs
crates/core/src/error/: api.rs  mod.rs
crates/core/src/error/core/: mod.rs
crates/core/src/fallback/: mod.rs
crates/core/src/islamic/: analyzer.rs
crates/core/src/models/: analysis.rs  fatwa.rs  history.rs  messages.rs  mod.rs  query.rs  token.rs
crates/core/src/solana/: mod.rs  token_fetcher.rs
crates/dekstop/: Cargo.toml
crates/web/: Cargo.toml
crates/web/src/: main.rs
docs/features/akses-dapps-via-solana-platform/: gherkin.md  mermaid.mmd
docs/features/backtest-dan-evaluasi-berkala/: gherkin.md  mermaid.mmd
docs/features/chatbot/: gherkin.md
docs/features/riwayat-analisis-token/: gherkin.md  mermaid.mmd
docs/features/scraping-otomatis-dari-sumber-awal/: gherkin.md
docs/features/tambahan-data-oleh-pengguna/: gherkin.md
scripts/: debug_fallback.sh  realtime_debug_guide.sh
spec/features/analisa-token-haram/: gherkin.md  mermaid-audio-input.mmd  mermaid-contract-address.mmd  mermaid-text-input.mmd
spec/features/chatbot/: mermaid.mmd
spec/features/scraping-otomatis-dari-sumber-awal/: mermaid.mmd
spec/features/tambahan-data-oleh-pengguna/: mermaid.mmd
src/: lib.rs  main.rs
