[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/web",
    "crates/dekstop",
    "crates/backend",
    "benches",
]

[workspace.package]
repository = "https://github.com/rizary/rizary-capital-rust"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2024"
authors = ["rizary@rizary.capital"]

[workspace.lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
unnameable_types = "warn"
unreachable_pub = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
bool_assert_comparison = "allow"
branches_sharing_code = "allow"
checked_conversions = "warn"
collapsible_else_if = "allow"
create_dir = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
doc_markdown = "warn"
empty_enum = "warn"
enum_glob_use = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
fallible_impl_from = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp_const = "warn"
fn_params_excessive_bools = "warn"
from_iter_instead_of_collect = "warn"
if_same_then_else = "allow"
implicit_clone = "warn"
imprecise_flops = "warn"
inconsistent_struct_constructor = "warn"
inefficient_to_string = "warn"
infinite_loop = "warn"
invalid_upcast_comparisons = "warn"
large_digit_groups = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
let_and_return = "allow"                 # sometimes good to name what you are returning
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
mem_forget = "warn"
mutex_integer = "warn"
needless_continue = "allow"
needless_for_each = "warn"
negative_feature_names = "warn"
path_buf_push_overwrite = "warn"
ptr_as_ptr = "warn"
rc_mutex = "warn"
redundant_feature_names = "warn"
ref_option_ref = "warn"
rest_pat_in_fully_bound_structs = "warn"
result_large_err = "allow"
same_functions_in_if_condition = "warn"
self_named_module_files = "warn"
semicolon_if_nothing_returned = "warn"
str_to_string = "warn"
string_add = "warn"
string_add_assign = "warn"
string_lit_as_bytes = "warn"
string_to_string = "warn"
todo = "warn"
trait_duplication_in_bounds = "warn"
uninlined_format_args = "warn"
verbose_file_reads = "warn"
wildcard_imports = "warn"
zero_sized_map_values = "warn"

[workspace.dependencies]
tokio = { version = "1.43.0", features = ["full"] }
tokio-retry = "0.3.0"
tokio-util = "0.7.13"
anyhow = "1.0.80"
thiserror = "2.0.12"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
borsh = "1.5.1"
chrono = { version = "0.4.39", features = ["serde"] }
chrono-tz = "0.10.3"
url = "2.5.4"
urlencoding = "2.1.2"
futures = "0.3.30"
futures-util = "0.3.30"
async-trait = "0.1.83"
async-stream = "0.3.6"
dotenvy = "0.15.7"
clap = { version = "4.5.28", features = ["derive"] }
petgraph = { version = "0.8.2", features = ["serde-1"] }
toml = "0.9.2"
rand = "0.9.1"
uuid = { version = "1.11.0", features = ["v4", "serde"] }

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tracing-appender = "0.2.2"

# Database
bb8 = "0.9.0"
bb8-postgres = "0.9.0"
bb8-redis = "0.24.0"
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4"] }
postgres-native-tls = "0.5.1"
redis = { version = "0.32.0", features = ["aio", "tokio-comp"] }

# Solana
solana-account = "2.2"
solana-account-decoder = "2.2"
solana-account-decoder-client-types = "2.2"
solana-client = "2.2"
solana-clock = "2.2"
solana-commitment-config = "2.2"
solana-entry = "2.2"
solana-hash = "2.2"
solana-instruction = { version = "2.2", default-features = false }
solana-message = "2.2"
solana-native-token = "2.2"
solana-program = "2.2"
solana-program-pack = "2.2"
solana-pubkey = { version = "2.2", features = ["serde", "borsh", "curve25519"] }
solana-signature = { version = "2.2", features = ["rand"] }
solana-transaction = "2.2"
solana-transaction-context = "2.2"
solana-transaction-status = "2.2"
spl-memo = "6.0.0"
spl-token = "8.0.0"

# SSL/TLS
openssl = { version = "0.10", features = ["vendored"] }
native-tls = { version = "0.2", features = ["vendored"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

# crossbeam
crossbeam = "0.8"

# benchmarks
criterion = { version = "0.6.0", features = ["html_reports"] }

# tests
automod = "1.0.14"

# Web API framework
reqwest = { version = "0.12.15", default-features = false, features = [
    "json",
    "cookies",
    "http2",
    "blocking",
] }
axum = "0.8.4"
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["cors", "trace"] }
hyper = "1.5.1"

[profile.dev]
panic = "abort"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[profile.release-perf]
inherits = "release"
debug = true         # Enable debug symbols for profiling in release mode (no perf hit)

[profile.bench-perf]
inherits = "release"
debug = true         # Same for benchmarks
