[package]
name = "package-benches"
repository.workspace = true
license.workspace = true
edition.workspace = true
workspace = ".."

[dev-dependencies]
criterion.workspace = true
averroes_core = { path = "../crates/core" }
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
uuid = { workspace = true }

[[bench]]
name = "benches"
path = "src/benches.rs"
harness = false

[[bench]]
name = "analysis_performance"
path = "src/analysis_performance.rs"
harness = false

[lints]
workspace = true
