[package]
name = "web"
repository.workspace = true
license.workspace = true
edition.workspace = true
workspace = "../.."

[dependencies]
tokio.workspace = true
crossbeam.workspace = true
axum.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
fiqh_core = { path = "../core" }

[lints]
workspace = true
